--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,9 +16,12 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
+            android:name=".Register"
+            android:exported="false" />
+        <activity
             android:name=".Checkout"
             android:exported="false"
-            android:parentActivityName=".WarehouseDetail"/>
+            android:parentActivityName=".WarehouseDetail" />
         <activity
             android:name=".WarehouseDetail"
             android:exported="false"
